# LAMBDA-Framework-Evaluation

./: .gitignore  Lambda_v1.ipynb  README.md  california_housing_affordability.csv  california_housing_generate.py  decision_tree_model.pkl  lambda_drift_analysis.html  logistic_regression_model.pkl  mlp_tuned_model.pkl  scaler.pkl  svm_model.pkl
2026-02-20 10.10.35 Carter Hsu's Zoom Meeting/: recording.conf
DSGym/: .gitignore  README.md  build_report.py  drift_analysis.py  drift_plot.py  gemini_judge.py  inspect_qrdata.py  lambda_drift_analysis.ipynb  lambda_dsgym_wrapper.py  main.py  pyproject.toml  rubric_scorer.py  run_lambda.py  test.py
DSGym/drift_analysis/: category_counts.csv
DSGym/dsgym/: __init__.py
DSGym/dsgym/agents/: __init__.py  base_agent.py  dspredict_react_agent.py  react_ds_agent.py  tci_agent.py
DSGym/dsgym/agents/backends/: __init__.py  base.py  litellm_backend.py  multi_vllm_backend.py  sglang_backend.py  vllm_backend.py
DSGym/dsgym/agents/environment/: __init__.py  base_text_env.py  core.py
DSGym/dsgym/agents/environment/envs/: __init__.py
DSGym/dsgym/agents/environment/envs/allocated_code/: __init__.py  env.py  utils.py
DSGym/dsgym/cli/: __init__.py  eval.py  generate.py  main.py  train.py
DSGym/dsgym/datasets/: __init__.py  base.py  config.py  registry.py  utils.py
DSGym/dsgym/datasets/loaders/: __init__.py  dabstep.py  daeval.py  discovery_bench.py  dsbio.py  dspredict.py  kaggle_downloader.py  mlebench.py  qrdata.py
DSGym/dsgym/datasets/prompts/: __init__.py  system_prompts.py
DSGym/dsgym/eval/: README.md  __init__.py  dataset_integration.py  evaluator.py  metric_registry.py  utils.py
DSGym/dsgym/eval/metrics/: __init__.py  base.py  code_execution.py  domain_specific.py  equivalence_by_llm.py  exact_match.py  semantic_similarity.py
DSGym/dsgym/eval/metrics/dspredict/: __init__.py  dspredict_metric.py  leaderboard_utils.py
DSGym/dsgym/eval/metrics/mlebench/: __init__.py  mlebench_metric.py
DSGym/dsgym/synth/: __init__.py
DSGym/dsgym/synth/filters/: __init__.py  difficulty_filter.py  quality_filter.py
DSGym/dsgym/synth/generators/: __init__.py  query_generator.py  trajectory_generator.py
DSGym/dsgym/synth/prompts/: __init__.py  system_prompts.py
DSGym/dsgym/train/: __init__.py
DSGym/examples/: __init__.py  evaluate.py  run.py
DSGym/executors/: README.md  compose.sh  container_config.json  container_config_bio.json  container_config_dspredict_hard.json  docker-compose-bio.yml  docker-compose-dsbio.yml  docker-compose-dsgym-mle.yml  docker-compose-test.yml  docker-compose.yml  docker-dspredict-easy.yml  docker-dspredict-hard.yml  generate_compose.py  requirements.txt
DSGym/executors/configs/: README.md  default.env  long-running.env  quick-tests.env
DSGym/executors/container_images/bio_image/: Dockerfile  README.md  kernel_executor.py  main.py  output_cleaning.py  requirements.txt  run.sh
DSGym/executors/container_images/bio_image/tools/: local.py
DSGym/executors/container_images/instance/: Dockerfile  kernel_executor.py  main.py  output_cleaning.py  requirements.txt
DSGym/executors/container_images/kaggle_image/: Dockerfile  README.md  instruction.txt  kernel_executor.py  main.py  output_cleaning.py  requirements.kaggle.txt  rewards.py
DSGym/executors/container_images/mle_image/: Dockerfile  entrypoint.sh  instructions.txt  instructions_obfuscated.txt  requirements.txt
DSGym/executors/examples/: lifecycle_test.py
DSGym/executors/examples/simple_test/: container_config.json  docker-compose-simple.yml  run_example.sh  test_simple.py
DSGym/executors/manager/: Dockerfile  main.py
DSGym/executors/submissions/container_000/: submission.csv
DSGym/executors/submissions/container_001/: submission.csv
DSGym/executors/submissions/container_002/: submission.csv
DSGym/executors/tests/: test_allocation.py  test_code_folder.py  test_container_types.py  test_executor.py  test_gpu.sh  test_gpu_execution.py  test_instance.py  test_kaggle_data.py  test_output_cleaning.py
DSGym/executors/tests/test_code/: calculations.py  utils.py
LAMBDA/: .gitignore  LAMBDA.py  config.yaml  conversation.py  display.py  kernel.py  lambda_app.py  programmer.py
LAMBDA/cache/: cache.py
LAMBDA/front_end/: js.py
LAMBDA/prompt_engineering/: prompts.py
LAMBDA/utils/: utils.py
drift_analysis/: category_counts.csv  drift_rows.csv  drift_trajectory.csv  per_sample.csv  recovery_rate.csv  session_timeline.csv
evaluation_results/: qrdata_lambda_inproc_config.json  qrdata_lambda_inproc_judged.json  qrdata_lambda_inproc_metrics.json  qrdata_lambda_inproc_report.md  qrdata_lambda_inproc_results.json  qrdata_lambda_inproc_summary.csv  qrdata_lambda_inproc_summary.json
