[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsgym"
version = "0.1.0"
description = "Unified Data Science Benchmark Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DSGym Team"},
]
requires-python = "==3.12.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = [
    "data-science",
    "machine-learning", 
    "benchmark",
    "evaluation",
    "llm",
    "agents"
]

dependencies = [
    # Core dependencies
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "tqdm>=4.60.0",
    "omegaconf>=2.1.0",
    # Evaluation and metrics
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    # Configuration and utilities
    "pydantic>=1.8.0",
    "pyyaml>=5.4.0",
    "httpx>=0.24.0",
    "transformers>=4.51.0",
    "litellm",
    "kaggle",
    "kagglesdk",
    "beautifulsoup4",
    "selenium",
    "requests",
    "tenacity",
    "statistics",
    "pyarrow>=21.0.0",
    "scikit-image>=0.25.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "together>=1.5.30",
]

[tool.uv]
conflicts = [
    [
        { extra = "vllm" },
        { extra = "sglang" },
    ],
    [
        { extra = "vllm" },
        { extra = "flashrl" },
        { extra = "sglang" },
    ],
    [
        { extra = "mcore" },
        { extra = "sglang" },
        { extra = "flashrl" },
    ]
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]

# LLM backends

vllm = [
    "vllm==0.10.1.1",
    "torch==2.7.1",
    "flashinfer-python",
    "torchvision",
]

sglang = [
    "sglang[srt,openai,torch_memory_saver]==0.4.8.post1",  # 0.4.9.post1 causes non-colocate weight broadcast to hang
    "flashinfer-python",
    "torch==2.7.1",
    "torchvision",
    "nvidia-ml-py",  # Replace deprecated pynvml to avoid warnings
]

# Evaluation metrics
metrics = [
    "sentence-transformers>=2.2.0",
    "nltk>=3.7",
    "rouge-score>=0.1.0",
]

# Synthetic data generation
synth = [
    "faker>=15.0.0",
    "copulas>=0.8.0",
]

# Training support (when implemented)
train = [
    # Will be added when training module is implemented
]

# All optional dependencies
all = [
    "dsgym[dev,backends,metrics,synth]",
]

[project.urls]
Homepage = "https://github.com/fannie1208/DSGym"
Repository = "https://github.com/fannie1208/DSGym"
Issues = "https://github.com/fannie1208/DSGym/issues"
Documentation = "https://github.com/fannie1208/DSGym/blob/main/README.md"

[project.scripts]
dsgym = "dsgym.cli.main:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["dsgym*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "vllm.*",
    "transformers.*",
    "litellm.*",
    "sglang.*",
    "omegaconf.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["dsgym"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
